// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby=":r0:-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <form
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-1e2ego0"
        id=":r0:"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <h2
              class="rcx-box rcx-box--full rcx-modal__title rcx-css-trljwa rcx-css-lma364"
              id=":r0:-title"
            >
              Teams_New_Title
            </h2>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              title="Close"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-rh8v0f"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1pkhe06"
            >
              Teams_new_description
            </div>
            <fieldset
              class="rcx-box rcx-box--full rcx-field-group rcx-css-heem01"
              role="group"
            >
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r1:"
                >
                  Teams_New_Name_Label
                  <span
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
                  >
                    *
                  </span>
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
                  >
                    <input
                      aria-describedby=":r1:-error :r1:-hint"
                      aria-invalid="false"
                      aria-required="true"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                      id=":r1:"
                      name="name"
                      size="1"
                      type="text"
                    />
                    <span
                      class="rcx-box rcx-box--full rcx-input-box__addon"
                    >
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-icon--name-team-lock rcx-icon rcx-css-4pvxx3"
                      >
                        
                      </i>
                    </span>
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r1:-hint"
                >
                  No_spaces_or_special_characters
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r2:"
                >
                  Topic
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <input
                    aria-describedby=":r2:-hint"
                    class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
                    id=":r2:"
                    name="topic"
                    size="1"
                    type="text"
                  />
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <span
                    class="rcx-box rcx-box--full rcx-field__hint"
                    id=":r2:-hint"
                  >
                    Displayed_next_to_name
                  </span>
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r7:"
                >
                  Teams_New_Add_members_Label
                </label>
                <div
                  class="rcx-box rcx-box--full rcx-autocomplete rcx-css-t3n91h"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-6d871f"
                    role="group"
                  >
                    <input
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-rcil7k"
                      id=":r7:"
                      placeholder="Add_people"
                      value=""
                    />
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-autocomplete__addon"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-6vi44e"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-field__label rcx-label"
                    for=":r3:"
                  >
                    Teams_New_Private_Label
                  </label>
                  <label
                    class="rcx-box rcx-box--full rcx-toggle-switch"
                  >
                    <input
                      aria-describedby=":r3:-hint"
                      checked=""
                      class="rcx-box rcx-box--full rcx-toggle-switch__input"
                      id=":r3:"
                      type="checkbox"
                    />
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                    />
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r3:-hint"
                >
                  People_can_only_join_by_being_invited
                </span>
              </div>
            </fieldset>
            <div
              class="rcx-box rcx-box--full rcx-box--animated rcx-accordion"
            >
              <section
                class="rcx-box rcx-box--full rcx-accordion-item"
              >
                <div
                  aria-controls=":r9:"
                  aria-expanded="false"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                  role="button"
                  tabindex="0"
                >
                  <h2
                    class="rcx-box rcx-box--full rcx-accordion-item__title"
                    id=":r8:"
                  >
                    Advanced_settings
                  </h2>
                  <span
                    class="rcx-box rcx-box--full rcx-chevron"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                    >
                      
                    </i>
                  </span>
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel"
                  id=":r9:"
                >
                  <fieldset
                    class="rcx-box rcx-box--full rcx-field-group"
                    role="group"
                  >
                    <h5
                      class="rcx-box rcx-box--full rcx-field-group__item rcx-css-1rcvt7i"
                    >
                      Security_and_permissions
                    </h5>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r5:"
                        >
                          Teams_New_Encrypted_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r5:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r5:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r5:-hint"
                      >
                        Not_available_for_this_workspace
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4:"
                        >
                          Teams_New_Read_only_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r4:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r4:-hint"
                      >
                        Anyone_can_send_new_messages
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r6:"
                        >
                          Teams_New_Broadcast_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r6:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            id=":r6:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                    </div>
                  </fieldset>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              disabled=""
              type="submit"
            >
              <span
                class="rcx-button--content"
              >
                Create
              </span>
            </button>
          </div>
        </div>
      </form>
    </dialog>
  </div>
</body>
`;

exports[`renders DefaultVersion2 without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby=":ra:-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <form
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-1e2ego0"
        id=":ra:"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <h2
              class="rcx-box rcx-box--full rcx-modal__title rcx-css-trljwa rcx-css-lma364"
              id=":ra:-title"
            >
              Teams_New_Title
            </h2>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              title="Close"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-rh8v0f"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1pkhe06"
            >
              Teams_new_description
            </div>
            <fieldset
              class="rcx-box rcx-box--full rcx-field-group rcx-css-heem01"
              role="group"
            >
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":rb:"
                >
                  Teams_New_Name_Label
                  <span
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
                  >
                    *
                  </span>
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
                  >
                    <input
                      aria-describedby=":rb:-error :rb:-hint"
                      aria-invalid="false"
                      aria-required="true"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                      id=":rb:"
                      name="name"
                      size="1"
                      type="text"
                    />
                    <span
                      class="rcx-box rcx-box--full rcx-input-box__addon"
                    >
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-icon--name-team-lock rcx-icon rcx-css-4pvxx3"
                      >
                        
                      </i>
                    </span>
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":rb:-hint"
                >
                  No_spaces_or_special_characters
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":rc:"
                >
                  Topic
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <input
                    aria-describedby=":rc:-hint"
                    class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
                    id=":rc:"
                    name="topic"
                    size="1"
                    type="text"
                  />
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <span
                    class="rcx-box rcx-box--full rcx-field__hint"
                    id=":rc:-hint"
                  >
                    Displayed_next_to_name
                  </span>
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":rh:"
                >
                  Teams_New_Add_members_Label
                </label>
                <div
                  class="rcx-box rcx-box--full rcx-autocomplete rcx-css-t3n91h"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-6d871f"
                    role="group"
                  >
                    <input
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-rcil7k"
                      id=":rh:"
                      placeholder="Add_people"
                      value=""
                    />
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-autocomplete__addon"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-6vi44e"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-field__label rcx-label"
                    for=":rd:"
                  >
                    Teams_New_Private_Label
                  </label>
                  <label
                    class="rcx-box rcx-box--full rcx-toggle-switch"
                  >
                    <input
                      aria-describedby=":rd:-hint"
                      checked=""
                      class="rcx-box rcx-box--full rcx-toggle-switch__input"
                      id=":rd:"
                      type="checkbox"
                    />
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                    />
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":rd:-hint"
                >
                  People_can_only_join_by_being_invited
                </span>
              </div>
            </fieldset>
            <div
              class="rcx-box rcx-box--full rcx-box--animated rcx-accordion"
            >
              <section
                class="rcx-box rcx-box--full rcx-accordion-item"
              >
                <div
                  aria-controls=":rj:"
                  aria-expanded="false"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                  role="button"
                  tabindex="0"
                >
                  <h2
                    class="rcx-box rcx-box--full rcx-accordion-item__title"
                    id=":ri:"
                  >
                    Advanced_settings
                  </h2>
                  <span
                    class="rcx-box rcx-box--full rcx-chevron"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                    >
                      
                    </i>
                  </span>
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel"
                  id=":rj:"
                >
                  <fieldset
                    class="rcx-box rcx-box--full rcx-field-group"
                    role="group"
                  >
                    <h5
                      class="rcx-box rcx-box--full rcx-field-group__item rcx-css-1rcvt7i"
                    >
                      Security_and_permissions
                    </h5>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":rf:"
                        >
                          Teams_New_Encrypted_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":rf:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":rf:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":rf:-hint"
                      >
                        Not_available_for_this_workspace
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":re:"
                        >
                          Teams_New_Read_only_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":re:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":re:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":re:-hint"
                      >
                        Anyone_can_send_new_messages
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":rg:"
                        >
                          Teams_New_Broadcast_Label
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":rg:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            id=":rg:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                    </div>
                  </fieldset>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              disabled=""
              type="submit"
            >
              <span
                class="rcx-button--content"
              >
                Create
              </span>
            </button>
          </div>
        </div>
      </form>
    </dialog>
  </div>
</body>
`;
